--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,6 +29,6 @@ jobs:
           cd TopMovies &&
           git reset --hard origin/main &&
           git pull origin main &&
-          docker-compose down &&
-          docker-compose up --build --detach
+          sudo docker compose down &&
+          sudo docker compose up --build --detach
           "
