--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,7 +27,8 @@ jobs:
         run: |
           ssh ${{ secrets.VM_USERNAME }}@${{ secrets.VM_IP }} "
           cd TopMovies &&
-          git reset --hard origin/main &&
+          git checkout main &&
+          git reset --hard &&
           git pull origin main &&
           sudo docker compose down &&
           sudo docker compose up --build --detach
