--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,6 +30,8 @@ jobs:
           git checkout main &&
           git reset --hard &&
           git pull origin main &&
-          sudo docker compose down &&
-          sudo docker compose up --build --detach
+          sudo docker compose down --rmi all &&
+          sudo docker compose build --no-cache &&
+          sudo docker compose pull &&
+          sudo docker compose up -d
           "
