--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,7 @@ services:
       - "7200:7200"
     restart: unless_stopped
   topmovies:
-    container_name: topmovies
+    container_name: topmovies-web
     build:
       context: .
     ports:
