--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
     entrypoint: ["/bin/bash", "/graphdb-data/start.sh"]
     ports:
       - "7200:7200"
-    restart: unless_stopped
+    restart: unless-stopped
   topmovies:
     container_name: topmovies-web
     build:
@@ -18,4 +18,4 @@ services:
       - graphdb
     environment:
       - GRAPHDB_URL=http://graphdb:7200/repositories/Nama-Kelompok
-    restart: unless_stopped
+    restart: unless-stopped
