--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,7 +31,7 @@ jobs:
           git reset --hard &&
           git pull origin main &&
           sudo docker compose down --rmi all &&
-          sudo docker prune -a -f &&
+          sudo docker builder prune -a -f &&
           sudo docker compose pull &&
           sudo docker compose up -d --build
           "
